k8s/namespace.yml
apiVersion: v1
kind: Namespace

metadata:
  name: node-ns
  labels:
    app: node
