k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: node-deployment
  namespace: node-ns
  labels:
    app: node

spec:
  replicas: 2
  selector:
    matchLabels:
      app: node

  template:
    metadata:
      labels:
        app: node

    spec:
      containers:
      - name: node-pod
        image: priyanshijat6701/node-image
        ports:
        - containerPort: 8000
