k8s/pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: java-pod
  namespace: node-ns

spec:
  containers:
  - name: node-pod
    image: priyanshijat6701/node-image
    ports:
    - containerPort: 8000
