k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: node-svc
  namespace: node-ns
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
